# Padi

./: INSTRUCTIONS.md  INSTRUCTIONS_UPDATED.md  LICENSE  README.md  pyproject.toml  run_padi.py
config/: default.yaml  dev.yaml  prod.yaml
outputs/batches/: .gitkeep
outputs/pages/: .gitkeep
padi/src/padi/: __init__.py
src/padi/: __init__.py  __main__.py
src/padi/cli/: __init__.py  main.py
src/padi/core/: __init__.py
src/padi/core/pdf/: __init__.py  pdf_processor.py
src/padi/core/processing/: __init__.py  batch_manager.py  text_cleaner.py
src/padi/core/storage/: __init__.py  file_writer.py
src/padi/models/: __init__.py  batch_data.py  error_data.py  page_data.py
src/padi/utils/: __init__.py  config.py  config_manager.py  file_ops.py  logging.py  platform_utils.py
tests/: __init__.py  test_basic.py
tests/cli/: test_cli.py
tests/core/pdf/: __init__.py  test_pdf_processor.py
tests/core/processing/: __init__.py  test_batch_manager.py  test_text_cleaner.py
tests/core/storage/: __init__.py  test_file_writer.py
tests/models/: test_batch_data.py  test_error_data.py  test_page_data.py
tests/utils/: test_config.py  test_file_ops.py  test_logging.py
